--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background: url(Images/My\ project.png);
+    background: url(Images/Dipesh.png);
     background-size: cover;
     background-position: centre;
 
